src/test/deca/context/invalid/homemade/select_notfield_decompile.res
class A extends Object {
	int x() {
		return 2;
	}
}
{
	A a = new A();
	int x = 2;
	print(a.x);
}
